--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,39 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# GIT Ignore File
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
+# Testing
 /coverage
 
-# next.js
-/.next/
-/out/
+# Next.js
+/.next
+/out
 
-# production
+# Production
 /build
 
-# misc
+# Misc
 .DS_Store
-*.pem
 
-# debug
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# Env files
+.env
+.env.development
+.env.test
+.env.production
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# vercel
-.vercel
+# ide
+/.vscode
+/.idea
+/.vercel
